font readability fix

--- a/src/scss/calendar.scss
+++ b/src/scss/calendar.scss
@@ -9,12 +9,16 @@
 }
 
 .container {
-    align-items: center;
+    align-items: flex-start;
     display: flex;
     flex-direction: column;
     height: 100vh;
     justify-content: center;
-    padding: 0 24px;
+    padding: 0 5vw 0 15vw;
+    
+    @media screen and (max-width: 640px) {
+        padding: 0 32px;
+    }
 }
 
 .header {
@@ -23,7 +27,7 @@
     font-weight: bold;
     line-height: 1.1em;
     letter-spacing: 0.5px;
-    hyphens: auto;
+    user-select: none;
 }
 
 .header-bright {
@@ -76,7 +80,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 820px;
+    max-width: 1100px;
+    width: 100%;
     text-align: left;
     margin-top: -80px;
     
